--- a/source/form.html
+++ b/source/form.html
@@ -58,85 +58,87 @@
     </section>
   </header>
 
-  <main class="main main--form">
-    <h2 class="visually-hidden">Форма заказа</h2>
-    <p class="main__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
-    <form class="form" action="https://echo.htmlacademy.ru" method="GET">
-      <fieldset class="form__fieldset">
-        <legend class="form__legend form__legend--type">Тип</legend>
-        <ul class="form__inputs">
-          <li class="form__inputs-item">
-            <input class="visually-hidden form__input-radio" type="radio" name="type" id="accessory" value="accessory" checked>
-            <label class="form__label form__label--radio" for="accessory">Аксессуар для интерьера</label>
-          </li>
-          <li class="form__inputs-item">
-            <input class="visually-hidden form__input-radio" type="radio" name="type" id="toy" value="toy">
-            <label class="form__label form__label--radio" for="toy">Детская игрушка</label>
-          </li>
-        </ul>
-      </fieldset>
-      <fieldset class="form__fieldset">
-        <legend class="form__legend form__legend--color">Цвет</legend>
-        <ul class="form__inputs">
-          <li class="form__inputs-item">
-            <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-white" value="white" checked>
-            <label class="form__label form__label--checkbox" for="color-white">Белый</label>
-          </li>
-          <li class="form__inputs-item">
-            <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-grey" value="grey" checked>
-            <label class="form__label form__label--checkbox" for="color-grey">Серый</label>
-          </li>
-          <li class="form__inputs-item">
-            <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-tiffany" value="tiffany">
-            <label class="form__label form__label--checkbox" for="color-tiffany">«Тиффани»</label>
-          </li>
-          <li class="form__inputs-item">
-            <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-black" value="black">
-            <label class="form__label form__label--checkbox" for="color-black">Черный</label>
-          </li>
-          <li class="form__inputs-item">
-            <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-pink" value="pink">
-            <label class="form__label form__label--checkbox" for="color-pink">Розовый</label>
-          </li>
-          <li class="form__inputs-item">
-            <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-orange" value="orange">
-            <label class="form__label form__label--checkbox" for="color-orange">Оранжевый</label>
-          </li>
-        </ul>
-      </fieldset>
-      <fieldset class="form__fieldset">
-        <legend class="form__legend form__legend--name">Фио</legend>
-        <p class="form__field">
-          <label class="form__label form__label--name" for="name-field">Имя:</label>
-          <input class="form__input" type="text" name="name" id="name-field" placeholder="Введите ваше имя*" required>
-        </p>
-        <p class="form__field">
-          <label class="form__label form__label--name" for="surname-field">Фамилия:</label>
-          <input class="form__input" type="text" name="surname" id="surname-field" placeholder="Укажите фамилию*" required>
-        </p>
-        <p class="form__field">
-          <label class="form__label form__label--name" for="second-name-field">Отчество:</label>
-          <input class="form__input" type="text" name="second-name" id="second-name-field" placeholder="Отчество, если желаете">
-        </p>
-      </fieldset>
-      <fieldset class="form__fieldset">
-        <legend class="form__legend form__legend--tel">Тел</legend>
-        <label class="visually-hidden" for="phone-field">Ваш телефон:</label>
-        <input class="form__input form__input--tel" type="tel" name="phone" id="phone-field" placeholder="+7 XXX XXX XX XX*" required>
-      </fieldset>
-      <fieldset class="form__fieldset">
-        <legend class="form__legend form__legend--email">E-mail</legend>
-        <label class="visually-hidden" for="email-field">Ваш e-mail:</label>
-        <input class="form__input form__input--email" type="email" name="email" id="email-field" placeholder="Ваш Email*" required>
-      </fieldset>
-      <fieldset class="form__fieldset form__fieldset--last">
-        <legend class="form__legend form__legend--additional">Доп</legend>
-        <label class="visually-hidden" for="textarea-field">Опишите ваши пожелания</label>
-        <textarea class="form__input form__input--textarea" name="description" id="textarea-field" placeholder="Опишите все ваши пожелания к заказу"></textarea>
-      </fieldset>
-      <p class="form__text">*Поля обязательны для заполнения</p>
-      <button class="button form__send" type="submit">Отправить заказ</button>
-    </form>
+  <main class="main">
+    <section class="order-form">
+      <h2 class="visually-hidden">Форма заказа</h2>
+      <p class="order-form__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+      <form class="form" action="https://echo.htmlacademy.ru" method="GET">
+        <fieldset class="form__fieldset">
+          <legend class="form__legend form__legend--type">Тип</legend>
+          <ul class="form__inputs">
+            <li class="form__inputs-item">
+              <input class="visually-hidden form__input-radio" type="radio" name="type" id="accessory" value="accessory" checked>
+              <label class="form__label form__label--radio" for="accessory">Аксессуар для интерьера</label>
+            </li>
+            <li class="form__inputs-item">
+              <input class="visually-hidden form__input-radio" type="radio" name="type" id="toy" value="toy">
+              <label class="form__label form__label--radio" for="toy">Детская игрушка</label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset class="form__fieldset">
+          <legend class="form__legend form__legend--color">Цвет</legend>
+          <ul class="form__inputs">
+            <li class="form__inputs-item">
+              <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-white" value="white" checked>
+              <label class="form__label form__label--checkbox" for="color-white">Белый</label>
+            </li>
+            <li class="form__inputs-item">
+              <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-grey" value="grey" checked>
+              <label class="form__label form__label--checkbox" for="color-grey">Серый</label>
+            </li>
+            <li class="form__inputs-item">
+              <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-tiffany" value="tiffany">
+              <label class="form__label form__label--checkbox" for="color-tiffany">«Тиффани»</label>
+            </li>
+            <li class="form__inputs-item">
+              <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-black" value="black">
+              <label class="form__label form__label--checkbox" for="color-black">Черный</label>
+            </li>
+            <li class="form__inputs-item">
+              <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-pink" value="pink">
+              <label class="form__label form__label--checkbox" for="color-pink">Розовый</label>
+            </li>
+            <li class="form__inputs-item">
+              <input class="visually-hidden form__input-checkbox" type="checkbox" name="color" id="color-orange" value="orange">
+              <label class="form__label form__label--checkbox" for="color-orange">Оранжевый</label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset class="form__fieldset">
+          <legend class="form__legend form__legend--name">Фио</legend>
+          <p class="form__field">
+            <label class="form__label form__label--name" for="name-field">Имя:</label>
+            <input class="form__input" type="text" name="name" id="name-field" placeholder="Введите ваше имя*" required>
+          </p>
+          <p class="form__field">
+            <label class="form__label form__label--name" for="surname-field">Фамилия:</label>
+            <input class="form__input" type="text" name="surname" id="surname-field" placeholder="Укажите фамилию*" required>
+          </p>
+          <p class="form__field">
+            <label class="form__label form__label--name" for="second-name-field">Отчество:</label>
+            <input class="form__input" type="text" name="second-name" id="second-name-field" placeholder="Отчество, если желаете">
+          </p>
+        </fieldset>
+        <fieldset class="form__fieldset">
+          <legend class="form__legend form__legend--tel">Тел</legend>
+          <label class="visually-hidden" for="phone-field">Ваш телефон:</label>
+          <input class="form__input form__input--tel" type="tel" name="phone" id="phone-field" placeholder="+7 XXX XXX XX XX*" required>
+        </fieldset>
+        <fieldset class="form__fieldset">
+          <legend class="form__legend form__legend--email">E-mail</legend>
+          <label class="visually-hidden" for="email-field">Ваш e-mail:</label>
+          <input class="form__input form__input--email" type="email" name="email" id="email-field" placeholder="Ваш Email*" required>
+        </fieldset>
+        <fieldset class="form__fieldset form__fieldset--last">
+          <legend class="form__legend form__legend--additional">Доп</legend>
+          <label class="visually-hidden" for="textarea-field">Опишите ваши пожелания</label>
+          <textarea class="form__input form__input--textarea" name="description" id="textarea-field" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+        </fieldset>
+        <p class="form__text">*Поля обязательны для заполнения</p>
+        <button class="button form__send" type="submit">Отправить заказ</button>
+      </form>
+    </section>
   </main>
 
   <footer class="footer">
