--- a/source/form.html
+++ b/source/form.html
@@ -70,7 +70,7 @@
       <h2 class="visually-hidden">Форма заказа</h2>
       <p class="order-form__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
       <form class="form" action="https://echo.htmlacademy.ru" method="GET">
-        <fieldset class="form__fieldset">
+        <fieldset class="form__fieldset form__fieldset--type">
           <legend class="form__legend">Тип</legend>
           <ul class="form__inputs">
             <li class="form__inputs-item">
@@ -81,11 +81,11 @@
             </li>
             <li class="form__inputs-item">
               <input class="visually-hidden form__input-radio" type="radio" name="type" id="toy" value="toy">
-              <label class="form__label form__label--radio" for="toy">Детская игрушка</label>
+              <label class="form__label form__label--radio form__label--toy" for="toy">Детская игрушка</label>
             </li>
           </ul>
         </fieldset>
-        <fieldset class="form__fieldset">
+        <fieldset class="form__fieldset form__fieldset--color">
           <legend class="form__legend">Цвет</legend>
           <ul class="form__inputs">
             <li class="form__inputs-item">
@@ -114,7 +114,7 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="form__fieldset">
+        <fieldset class="form__fieldset form__fieldset--fio">
           <legend class="form__legend">Фио</legend>
           <p class="form__field">
             <label class="form__label form__label--name" for="name-field">Имя:</label>
@@ -129,7 +129,7 @@
             <input class="form__input" type="text" name="second-name" id="second-name-field" placeholder="Отчество, если желаете">
           </p>
         </fieldset>
-        <fieldset class="form__fieldset">
+        <fieldset class="form__fieldset form__fieldset--tel">
           <legend class="form__legend">Тел</legend>
           <label class="visually-hidden" for="phone-field">Ваш телефон:</label>
           <div class="form__input-wrapper">
@@ -148,7 +148,7 @@
             </svg>
           </div>
         </fieldset>
-        <fieldset class="form__fieldset">
+        <fieldset class="form__fieldset form__fieldset--email">
           <legend class="form__legend form__legend--email">E-mail</legend>
           <label class="visually-hidden" for="email-field">Ваш e-mail:</label>
           <div class="form__input-wrapper">
@@ -158,7 +158,7 @@
             </svg>
           </div>
         </fieldset>
-        <fieldset class="form__fieldset form__fieldset--last">
+        <fieldset class="form__fieldset form__fieldset--dop form__fieldset--last">
           <legend class="form__legend">Доп</legend>
           <label class="visually-hidden" for="textarea-field">Опишите ваши пожелания</label>
           <textarea class="form__input form__input--textarea" name="description" id="textarea-field" placeholder="Опишите все ваши пожелания к заказу"></textarea>
